# interval-timer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py  high_freq.py  intervals_missed.py  intervals_not_missed.py  lag.py  lagging.py  start_stop.py  threaded.py  using_next.py  using_start_stop.py
interval_timer/: __init__.py  interval.py  interval_timer.py
