[tool.poetry]
name = "interval-timer"
version = "0.1.2"
description = ""
authors = ["morefigs"]
homepage = "https://github.com/morefigs/interval-timer"
readme = "README.md"
packages = [{include = "interval_timer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
