[tool.poetry]
name = "interval-timer"
version = "1.0.0"
description = "interval-timer is a Python package that enables iterating over a sequence of regular time intervals with high precision."
authors = ["morefigs"]
homepage = "https://github.com/morefigs/interval-timer"
readme = "README.md"
packages = [{include = "interval_timer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
